# show_me_barcode

./: README.md  pyproject.toml  requirements.txt
data/: isbn.csv  isbn.tsv
src/show_me_barcode/: __init__.py  __main__.py  prompt.py  utils.py
static/: main.css  main.js
templates/: index.html
tools/: change_delimiter.py
